test/visibility/import/useAndImport-useExcept1c.good
useAndImport-useExcept1c.chpl:21: In function 'main':
useAndImport-useExcept1c.chpl:23: error: 'A' undeclared (first use this function)
